# libwrouter

./: .clang-format  .gitignore  Makefile  README.md  meson.build
include/: symbol.h  wrouter.h
src/: arena.c  arena.h  builder.c  builder.h  lexer.c  lexer.h  prelexer.c  prelexer.h  preparser.h  router.c  router.h  symbol.c  symbol.h  token.h  trie.h
tests/: test_arena.c  test_builder.c  test_lexer.c  test_prelexer.c  test_symbol.c
